[gd_scene load_steps=5 format=3 uid="uid://d0hr1lc780cnk"]

[ext_resource type="Texture2D" uid="uid://dqqhm0cq82dmy" path="res://Assets/SmeltingOvenTempArt.png" id="1_b4oie"]
[ext_resource type="Script" path="res://src/Scripts/Shops/SmeltingStation/smelting_oven.gd" id="1_xvuus"]
[ext_resource type="PackedScene" uid="uid://bg5twd5cmwn2c" path="res://src/Scenes/Interfaces/ProductCraftingStation.tscn" id="2_sy876"]
[ext_resource type="Resource" uid="uid://750t8v1t0ue5" path="res://src/Resources/RefineryProductList.tres" id="4_ljgqt"]

[node name="SmeltingOven" type="TextureButton" node_paths=PackedStringArray("product_crafting_station")]
offset_left = -15.0
offset_top = -32.0
offset_right = 17.0
texture_normal = ExtResource("1_b4oie")
script = ExtResource("1_xvuus")
product_crafting_station = NodePath("ProductCraftingStation")

[node name="ProductCraftingStation" parent="." instance=ExtResource("2_sy876")]
layout_mode = 1
offset_left = -196.0
offset_top = -197.0
offset_right = 184.0
offset_bottom = 7.0
product_list = ExtResource("4_ljgqt")

[connection signal="button_down" from="." to="." method="_on_button_down"]
